--- a/description/skills.tex
+++ b/description/skills.tex
@@ -1,6 +1,6 @@
 \resheading{技能专长}
   \begin{itemize}[leftmargin=*]
-    \item \textbf{语言}: Python，C/C++，\href{https://www.mathworks.com/}{MATLAB}，\href{https://www.latex-project.org/}{\LaTeX}
+    \item \textbf{语言}: Python，C/C++，\href{https://www.mathworks.com/}{MATLAB}，\href{https://www.latex-project.org/}{\LaTeX}，Java
     \item \textbf{办公软件}: VISIO,PPT,EXCEL,WORD
-    \item \textbf{英语}：英语能力较强，高考英语 122/150，CET-6 527
+    \item \textbf{英语}：英语能力较强，可用英语作为工作语言（CET-6 527）
   \end{itemize}
