--- a/description/education.tex
+++ b/description/education.tex
@@ -5,14 +5,14 @@
       \ressubheading{华东交通大学}{学士学位}{$\quad$机电与车辆工程学院$\cdot$车辆工程}{2015.09 -- 2019.07}
       {\small
       \begin{itemize}
-        \item{数学建模，数值计算，控制器原理， 程序设计(C++) ,机械工程控制原理，电工电子学等}
+        \item{数学建模,数值计算,控制器原理, 程序设计(C++) ,自动控制原理，列车网络控制}
       \end{itemize}
       }
       \item
       \ressubheading{澳门科技大学}{硕士学位}{$\quad$资讯科技学院$\cdot$应用数学与数据科学}{2019.09 -- 2021.07}
       {\small
       \begin{itemize}
-        \item{数值线性代数，应用统计分析，机器学习， 时间序列分析 ,数据挖掘，数据库系统，随机过程，数据科学程序设计}
+        \item{数值线性代数，应用统计分析，机器学习， 时间序列分析 ,数据挖掘，数据库系统，数据科学程序设计}
       \end{itemize}
       }
       
