--- a/description/company.tex
+++ b/description/company.tex
@@ -1,4 +1,4 @@
-\resheading{项目经历}
+\resheading{项目经历以及实习经历}
   \begin{itemize}[leftmargin=*]
     \item
       \ressubsingleline{美国大学生数学建模竞赛}{队长}{2017.02}
@@ -20,21 +20,66 @@
       \end{itemize}
       }
     \item
-      \ressubsingleline{一种联网联动小型晾衣机专利}{实用新型专利}{2017.05 -- 2017.12}
-      {\small
-      \begin{itemize}
-       \item 参与机械结构设计。
-       \item 参与控制系统以及电路系统设计。
-       \item 参与完成专利权利要求书撰写以及修改。
-      \end{itemize}
-      }
-    \item
       \ressubsingleline{泰迪杯}{队长}{2018.03 -- 2018.04}
       {\small
       \begin{itemize}
         \item 对电视节目收视率进行量化分析，根据收视分析改进收费节目策略，策略波动显著降低
-        \item 研究了协同过滤算法、遗传算法等算法在多因子模型中的应用
+        \item 研究了协同过滤算法、SVD 等算法在推荐系统中的应用
+        \item 利用 py-spark mlib 对算法进行实现
       \end{itemize}
       }
-  
+    \item
+      \ressubsingleline{Douban web crawler data analysis}{个人项目}{2019.09 – 2019.12}
+      {\small
+      \begin{itemize}
+       \item https://github.com/W55699/doubanbook − web − crawler
+       \item 利用正则表达式，并通过创建线程池，多线程爬取豆瓣书籍信息。
+       \item 将信息生成 csv 文件，并将信息存入 mysql 数据库。
+       \item 利用 pandas读取csv，并做数据可视化分析以及统计分析。
+       \item 通过 pca 将数据进行降维，提取关键信息，然后通过 k-means 算法进行聚类分析。 
+       \item 根据 pca 降维后的信息,同时结合数据的标记，将数据分为训练集和测试集，并将数据进行二分类，比较各种分类
+             方法如SVM,LR，决策树，随机森林算法的优劣。
+      \end{itemize}
+      }
+     \newpage
+     \item
+        \ressubsingleline{AIATSS(友邦资讯科技公司）}{测试组数据分析实习}{2020.04-2020.6}
+        {\small
+      \begin{itemize}
+      \item 撰写SQL以及python脚本校核公司内部数据。
+        \item 利用jira实时监控工作流程进度，并通过Excel pivot table 绘制组内测试进度报告。
+         \item 对测试流程以及ETL开发流程有了更深入的了解。
+         
+       \end{itemize}
+       }
+        \item
+           \ressubsingleline{TCL工业研究院}{数据挖掘实习}{2020.07-2020.10}
+           {\small
+      \begin{itemize}
+      \item 通过组内讨论，参与制定推荐系统CTR的业务指标，并基于以上指标进行统计分析。
+         \item 利用spark负责数据清洗以及异常数据的核验。
+          \item 参与组内的论文讨论，并参与大规模数据的分类（Random Fourier features SVM)、聚类(minitach kmeans)工作。
+           \item 参与组内爬虫代码的日常维护，丰富自身挖掘经验。
+
+            \end{itemize}
+
+             }
   \end{itemize}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
