--- a/description/awards.tex
+++ b/description/awards.tex
@@ -2,6 +2,13 @@
   \begin{itemize}[leftmargin=*]
     \item \ressubsingleline{2017美国大学生数学建模竞赛}{二等奖}{2017.02}
     \item \ressubsingleline{2016--2017学年华东交通大学三好学生}{}{2017.10}
-    \item \ressubsingleline{第六届“泰迪杯”数据挖掘}{三等奖}{2018.4}
+    \item \ressubsingleline{第六届“泰迪杯”数据挖掘}{三等奖}{2018.04}
     
+  \end{itemize}
+\resheading{论文以及专利}
+  \begin{itemize}[leftmargin=*]
+    \item\ressubsingleline{ 一种可单轨行走的转向架}{实用新型专利}{2017.11}
+    \item \ressubsingleline{ 一种联网联动小型化多功能晾衣机}{实用新型专利}{2017.11}
+    \item \ressubsingleline{ 一种基于激光检测独立供源的共享单车区域护车系统}{实用新型专利}{2017.11}
+     \item {JUNYAN ZHONG,HUIBIN WANG,KIN TAK U. Matryoshka Attack: Research on an Attack Method of Recommender System Based on Adversarial Learning and Optimization Solution,ICWAPR, 2020. } 
   \end{itemize}
