--- a/description/company.tex
+++ b/description/company.tex
@@ -9,25 +9,18 @@
         \item 研究城市可持续发展模型，与2位队友共同讨论后，撰写可持续发展数学模型英文论文，描述各项指标变化。
       \end{itemize}
       }
-    \item
-      \ressubsingleline{一种基于激光检测独立供源的共享单车护车系统}{实用新型专利} {2017.05 -- 2017.12}
-      {\small
-      \begin{itemize}
-        \item 参与专利外型设计。
-        \item 参与控制系统以及电路系统设计。
-        \item 参与完成专利权利要求书撰写以及修改。
-        
-      \end{itemize}
-      }
+    
     \item
       \ressubsingleline{泰迪杯}{队长}{2018.03 -- 2018.04}
       {\small
       \begin{itemize}
         \item 对电视节目收视率进行量化分析，根据收视分析改进收费节目策略，策略波动显著降低
-        \item 研究了协同过滤算法、SVD 等算法在推荐系统中的应用
-        \item 利用 py-spark mlib 对算法进行实现
+        \item 研究了协同过滤算法（Item-based,User-based)、SVD、FM 等算法在推荐系统中的应用
+        \item 利用 py-spark mlib 对算法进行实现,最终成绩位列top 15\%。
       \end{itemize}
       }
+
+
     \item
       \ressubsingleline{Douban web crawler data analysis}{个人项目}{2019.09 – 2019.12}
       {\small
@@ -39,6 +32,17 @@
        \item 通过 pca 将数据进行降维，提取关键信息，然后通过 k-means 算法进行聚类分析。 
        \item 根据 pca 降维后的信息,同时结合数据的标记，将数据分为训练集和测试集，并将数据进行二分类，比较各种分类
              方法如SVM,LR，决策树，随机森林算法的优劣。
+      \end{itemize}
+      }
+    \item
+      \ressubsingleline{IMDB sentiment analysis}{个人项目}{2020.10 – 2020.12}
+      {\small
+      \begin{itemize}
+      
+       \item 利用stop-words对数据集进行清洗，并通过wordcloud进行词云可视化。
+       \item 利用python gensim word2vec对文本进行向量化处理。
+       \item 训练并调整bi-lstm模型，使模型准确率在测试集中达到85\%。
+       \item 利用docker,Tensorflow-serving,streamlit对模型进行部署，实现可视化。
       \end{itemize}
       }
      \newpage
@@ -53,14 +57,25 @@
        \end{itemize}
        }
         \item
-           \ressubsingleline{TCL工业研究院}{数据挖掘实习}{2020.07-2020.10}
+           \ressubsingleline{TCL工业研究院}{数据挖掘实习}{2020.07-2020.09}
            {\small
       \begin{itemize}
       \item 通过组内讨论，参与制定推荐系统CTR的业务指标，并基于以上指标进行统计分析。
          \item 利用spark负责数据清洗以及异常数据的核验。
-          \item 参与组内的论文讨论，并参与大规模数据的分类（Random Fourier features SVM)、聚类(minitach kmeans)工作。
+          \item 参与组内的论文讨论，并参与大规模特征数据的分类（Random Fourier features SVM)、聚类(minitach kmeans)工作，并参与特征筛选以及特征交叉工作。
            \item 参与组内爬虫代码的日常维护，丰富自身挖掘经验。
 
+            \end{itemize}
+
+             }
+       \item
+           \ressubsingleline{品友互动}{策略算法工程师}{2021.02-}
+           {\small
+      \begin{itemize}
+      \item 利用Hive，以及Sqoop等工具等数据进行同步以及清洗（多张数据库表）。
+         \item 通过业务了解，划分并定义正负样本，并在实际项目中解决小样本训练问题。
+          \item 利用业务知识对缺失值进行补充，同时在特征工程中对特征交叉，特征构造做出尝试。
+           \item 利用LR,xgboost,catboost对所定义的问题进行分类，优化模型并对样本特征给出可行性解释。
             \end{itemize}
 
              }
