--- a/description/skills.tex
+++ b/description/skills.tex
@@ -1,6 +1,7 @@
-\resheading{技能专长}
+\resheading{技能及研究方向}
   \begin{itemize}[leftmargin=*]
     \item \textbf{语言}: Python，C/C++，\href{https://www.mathworks.com/}{MATLAB}，\href{https://www.latex-project.org/}{\LaTeX}，Java
-    \item \textbf{办公软件}: VISIO,PPT,EXCEL,WORD
+   \item \textbf{大数据类工具}:MySQL,Hive
     \item \textbf{英语}：英语能力较强，可用英语作为工作语言（CET-6 527）
+	\item \textbf{研究方向}：图神经网络，推荐系统安全，对抗训练
   \end{itemize}
