--- a/description/company.tex
+++ b/description/company.tex
@@ -1,4 +1,47 @@
-\resheading{项目经历以及实习经历}
+
+\resheading{工作经历}
+  \begin{itemize}[leftmargin=*]
+
+       \item
+           \ressubsingleline{品友互动}{策略算法工程师}{2021.02-至今}
+           {\small
+      \begin{itemize}
+      \item 利用Hive，以及Sqoop等工具等数据进行同步以及清洗。
+         \item 结合业务理解构建机器学习广汽本田复购模型（特征工程、模型训练），并进行代码管理和优化。
+          \item 和思必驰合作参与构建语音语义文本分析模型，主要参与文本的清洗以及后续业务报表构建工作。
+           \item 参与gmsm联邦建模工作，利用京东联邦学习平台进行求交优化，主要负责特征工程及模型的调优工作。
+            \end{itemize}
+
+             }
+  \end{itemize}
+\resheading{实习经历}
+  \begin{itemize}[leftmargin=*]
+     \item
+        \ressubsingleline{AIATSS(友邦资讯科技公司）}{测试组数据分析实习}{2020.04-2020.6}
+        {\small
+      \begin{itemize}
+      \item 撰写SQL以及python脚本校核公司内部数据。
+        \item 利用jira实时监控工作流程进度，并通过Excel pivot table 绘制组内测试进度报告。
+         \item 对测试流程以及ETL开发流程有了更深入的了解。
+         
+       \end{itemize}
+       }
+        \item
+           \ressubsingleline{TCL工业研究院}{数据挖掘实习}{2020.07-2020.09}
+           {\small
+      \begin{itemize}
+      \item 通过组内讨论，参与制定推荐系统CTR的业务指标，并基于以上指标进行统计分析。
+         \item 利用spark负责数据清洗以及异常数据的核验。
+          \item 参与组内的论文讨论，并参与大规模特征数据的分类（Random Fourier features SVM)、聚类(minitach kmeans)工作，并参与特征筛选以及特征交叉工作。
+           \item 参与组内爬虫代码的日常维护，丰富自身挖掘经验。
+
+            \end{itemize}
+
+             }
+
+  \end{itemize}
+
+\resheading{项目经历}
   \begin{itemize}[leftmargin=*]
     \item
       \ressubsingleline{美国大学生数学建模竞赛}{队长}{2017.02}
@@ -45,40 +88,8 @@
        \item 利用docker,Tensorflow-serving,streamlit对模型进行部署，实现可视化。
       \end{itemize}
       }
-     \newpage
-     \item
-        \ressubsingleline{AIATSS(友邦资讯科技公司）}{测试组数据分析实习}{2020.04-2020.6}
-        {\small
-      \begin{itemize}
-      \item 撰写SQL以及python脚本校核公司内部数据。
-        \item 利用jira实时监控工作流程进度，并通过Excel pivot table 绘制组内测试进度报告。
-         \item 对测试流程以及ETL开发流程有了更深入的了解。
-         
-       \end{itemize}
-       }
-        \item
-           \ressubsingleline{TCL工业研究院}{数据挖掘实习}{2020.07-2020.09}
-           {\small
-      \begin{itemize}
-      \item 通过组内讨论，参与制定推荐系统CTR的业务指标，并基于以上指标进行统计分析。
-         \item 利用spark负责数据清洗以及异常数据的核验。
-          \item 参与组内的论文讨论，并参与大规模特征数据的分类（Random Fourier features SVM)、聚类(minitach kmeans)工作，并参与特征筛选以及特征交叉工作。
-           \item 参与组内爬虫代码的日常维护，丰富自身挖掘经验。
 
-            \end{itemize}
 
-             }
-       \item
-           \ressubsingleline{品友互动}{策略算法工程师}{2021.02-}
-           {\small
-      \begin{itemize}
-      \item 利用Hive，以及Sqoop等工具等数据进行同步以及清洗（多张数据库表）。
-         \item 通过业务了解，划分并定义正负样本，并在实际项目中解决小样本训练问题。
-          \item 利用业务知识对缺失值进行补充，同时在特征工程中对特征交叉，特征构造做出尝试。
-           \item 利用LR,xgboost,catboost对所定义的问题进行分类，优化模型并对样本特征给出可行性解释。
-            \end{itemize}
-
-             }
   \end{itemize}
 
 
