--- a/description/company.tex
+++ b/description/company.tex
@@ -1,9 +1,16 @@
 
 \resheading{工作经历}
   \begin{itemize}[leftmargin=*]
-
+         \item
+           \ressubsingleline{汇丰科技}{python开发工程师}{2022.07-至今}
+           {\small
+      \begin{itemize}
+      \item 利用python,hive,shell脚本对金融数据进行清洗，利用jenkins,git对代码进行CI/CD管理。
+          \item 利用GCP平台对于清洗后的数据进行欺诈可能性的预测。
+            \end{itemize}
+           }
        \item
-           \ressubsingleline{品友互动}{策略算法工程师}{2021.02-至今}
+           \ressubsingleline{品友互动}{策略算法工程师}{2021.02-2022.06}
            {\small
       \begin{itemize}
       \item 利用Hive，以及Sqoop等工具等数据进行同步以及清洗。
