--- a/description/company.tex
+++ b/description/company.tex
@@ -5,7 +5,7 @@
            \ressubsingleline{汇丰科技}{python开发工程师}{2022.07-至今}
            {\small
       \begin{itemize}
-      \item 利用python,hive,shell脚本对金融数据进行清洗，利用jenkins,git对代码进行CI/CD管理。
+      \item 利用python,hive,shell脚本对金融数据进行清洗,利用jenkins,git对代码进行CI/CD管理。
           \item 利用GCP平台对于清洗后的数据进行欺诈可能性的预测。
             \end{itemize}
            }
