--- a/description/awards.tex
+++ b/description/awards.tex
@@ -10,5 +10,5 @@
     \item \ressubsingleline{ 一种联网联动小型化多功能晾衣机}{实用新型专利}{2017.11}
     \item \ressubsingleline{ 一种基于激光检测独立供源的共享单车区域护车系统}{实用新型专利}{2017.11}
      \item {JUNYAN ZHONG,HUIBIN WANG,KIN TAK U. Matryoshka Attack: Research on an Attack Method of Recommender System Based on Adversarial Learning and Optimization Solution,ICWAPR, 2020. } 
- \item{JUNYAN ZHONG,HUIBIN WANG, Robust graph embeding recommendation against data posioning attack CIKM 2022(under review)}
+     \item{JUNYAN ZHONG,HUIBIN WANG, Robust graph embeding recommendation against data posioning attack Big Data Intelligence and Computing: International Conference, DataCom 2022.}
   \end{itemize}
