--- a/description/company.tex
+++ b/description/company.tex
@@ -99,7 +99,7 @@
       {\small
       \begin{itemize}
        \item 该项目主要利用车辆修理特征以及车主在官方微博、微信的特征对车主增换购进行推荐。
-       \item 数据预处理：使用 sqoop 将数据从数据库导入到 Hive。 然后使用hive SQL 使每个进程的数据（数据清洁并定义正样本和	      负样本）
+       \item 数据预处理：使用 sqoop 将数据从数据库导入到 Hive。 然后使用hive SQL 对数据进行预处理（数据清洗并定义正样本和负样本）
        \item 机器学习模型训练以及预测：使用pandas导入数据，做特征工程。 然后我们使用catboost、xgboost、逻辑回归模型来训练模型和预测。同时，我们根据得到的反馈调整每个模型的输出权重。
        \item 数据输出：结合业务逻辑过滤，输出模型前0.5\%预测结果到输出数据库，最后ETL团队将数据发送到各个4s店。ETL 团队会将这些数据传输到 4s 店以呼叫客户进行换购推广。
       \end{itemize}
