--- a/description/company.tex
+++ b/description/company.tex
@@ -6,7 +6,10 @@
            {\small
       \begin{itemize}
       \item 利用python,hive,shell脚本对金融数据进行清洗,利用jenkins,git对代码进行CI/CD管理。
-          \item 利用GCP平台对于清洗后的数据进行欺诈可能性的预测。
+       \item 利用python pandas读取清洗后的hive数据，并进行数据预处理（异常值以及缺失值处理）。
+		\item 利用python matplotlib 进行特征盘点，并绘制箱线图以及特征分布。
+		\item 利用python 进行特征工程以及编码（分箱以及映射）。
+          \item 利用GCP平台的Cloud Marketplace，使用pytorch对于清洗后的数据进行欺诈可能性的预测。
             \end{itemize}
            }
        \item
